# PathTracerCPU

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  rendersettings.h
src/app/: path_tracer_app.cpp  path_tracer_app.h
src/camera/: camera.cpp  camera.h
src/core/: intersection.h  ray.h
src/framebuffer/: framebuffer.cpp  framebuffer.h
src/gui/: gui_layer.cpp  gui_layer.h
src/gui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/intersectables/: bvh.cpp  bvh.h  intersectable.h  intersectable_list.cpp  intersectable_list.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/light/: light.cpp  light.h
src/material/: dielectric.cpp  dielectric.h  diffuse_emissive.h  lambert_diffuse.cpp  lambert_diffuse.h  material.h  material_funcs.h  mirror.cpp  mirror.h  rough_dielectric.cpp  rough_dielectric.h  specular_microfacet.cpp  specular_microfacet.h
src/output/: image_output.cpp  image_output.h
src/platform/: display.cpp  display.h  screen_quad.cpp  screen_quad.h  shader_program.cpp  shader_program.h  texture2d.cpp  texture2d.h  window.cpp  window.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/pbr_renderer/: closest_hit.cpp  miss.cpp  tracer.cpp  volume_event.cpp
src/renderer/simple_renderer/: closest_hit.cpp  miss.cpp  tracer.cpp
src/scene/: load_obj.cpp  scene.cpp  scene.h
src/util/: aabb.h  constants.h  image.h  onb.h  random.h  sampling.h  texture.cpp  texture.h
